load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader", "glsl_library")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")

copy_vulkan_layers()
copy_molten_vk()

glsl_library(
    name = "radix_sort_common",
    hdrs = [
        "radix_sort_common.glsl",
    ],
    visibility = ["//visibility:public"]
)

glsl_shader(
    name = "radix_count_histogram.comp.spv",
    src = "radix_count_histogram.comp",
    deps = [
        "//demos/common:glsl_bindless",
        ":radix_sort_common",
    ],
)

glsl_shader(
    name = "radix_scan.comp.spv",
    src = "radix_scan.comp",
    deps = [
        "//demos/common:glsl_bindless",
        ":radix_sort_common",
    ],
)

glsl_shader(
    name = "radix_sort.comp.spv",
    src = "radix_sort.comp",
    deps = [
        "//demos/common:glsl_bindless",
        ":radix_sort_common",
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/utils:utils",
    ],
    data = [
        ":radix_count_histogram.comp.spv",
        ":radix_scan.comp.spv",
        ":radix_sort.comp.spv",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)
