load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_images")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers")

copy_vulkan_layers()

cook_images(
    name = "cook_skybox",
    inputs = [
        "@ambientcg//:DayEnvironmentHDRI020_4K-HDR.exr",
    ],
    outputs = [
        "day.exr",
    ],
    generate_mips = False,
    eq2cube = True,
)

glsl_shader(
    name = "ray_generation.rgen.spv",
    src = "ray_generation.rgen",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "ray_closest_hit.rchit.spv",
    src = "ray_closest_hit.rchit",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "ray_intersection.rint.spv",
    src = "ray_intersection.rint",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "ray_miss.rmiss.spv",
    src = "ray_miss.rmiss",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "screen_quad.vert.spv",
    src = "screen_quad.vert",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "screen_quad.frag.spv",
    src = "screen_quad.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/utils:utils",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        "cook_skybox",
        "ray_generation.rgen.spv",
        "ray_closest_hit.rchit.spv",
        "ray_intersection.rint.spv",
        "ray_miss.rmiss.spv",
        "screen_quad.vert.spv",
        "screen_quad.frag.spv",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    })
)

