load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@helios//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
load("@helios//scripts/bazel/rules:glslang.bzl", "glsl_shader")

copy_files_to_directory(
    name = "copy_vulkan_validation_layer",
    srcs = [
        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
    ],
    output_directory = ".",
)

config_setting(
    name = "release_build",
    values = {
        "compilation_mode": "opt",
    },
)

glsl_shader(
    name = "triangle.vert.spv",
    src = "triangle.vert",
)

glsl_shader(
    name = "triangle.frag.spv",
    src = "triangle.frag",
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/platform:window",
        "//src/rhi:context",
    ],
    data = [
        ":triangle.frag.spv",
        ":triangle.vert.spv",
    ] + select({
        ":release_build": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }),
)

