load("@rules_python//python:py_binary.bzl", "py_binary")

py_binary(
    name = "generate_wayland_protocol",
    srcs = [
        "generate_wayland_protocol.py",
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "copy_files",
    srcs = [
        "copy_files.py",
    ],
    visibility = ["//visibility:public"],
)

