load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "import_spv",
    hdrs = [
        "import_spv.h",
    ],
    srcs = [
        "import_spv.cpp",
    ],
    includes = [".."],
    deps = [
        "//src/core:core",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "import_gltf",
    hdrs = [
        "import_gltf.h",
    ],
    srcs = [
        "import_gltf.cpp",
    ],
    includes = [".."],
    deps = [
        "//src/core:core",
        "@cgltf//:cgltf",
    ],
    visibility = ["//visibility:public"],
)

