load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "types",
    hdrs = [
        "types.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "platform",
    hdrs = [
        "platform.h",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "assert",
    hdrs = [
        "assert.h",
    ],
    srcs = [
        "assert.cpp",
    ],
    deps = [
        ":types",
        ":platform",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "memory_osx",
    hdrs = [
        "memory.h",
    ],
    srcs = [
        "memory_osx.cpp",
    ],
    target_compatible_with = [
        "@platforms//os:osx",
    ],
    deps = [
        ":types",
    ],
)

cc_library(
    name = "memory_windows",
    hdrs = [
        "memory.h",
    ],
    srcs = [
        "memory_windows.cpp",
    ],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
    deps = [
        ":types",
    ],
)

cc_library(
    name = "memory",
    hdrs = [
        "arena.h",
    ],
    srcs = [
        "arena.cpp",
    ],
    deps = [
        ":assert",
    ] + select({
        "@platforms//os:osx": [ ":memory_osx" ],
	    "@platforms//os:windows": [ ":memory_windows" ],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "thread_context",
    hdrs = [
        "thread_context.h",
    ],
    srcs = [
        "thread_context.cpp",
    ],
    deps = [
        ":memory",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "string8",
    hdrs = [
        "string8.h",
    ],
    srcs = [
        "string8.cpp",
    ],
    deps = [
        ":memory",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "filesystem",
    hdrs = [
        "filesystem.h",
    ],
    srcs = [
        "filesystem.cpp",
    ],
    deps = [
        ":string8",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "log",
    hdrs = [
        "log.h",
    ],
    srcs = [
        "log.cpp",
    ],
    deps = [
        ":assert",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "clock",
    hdrs = [
        "clock.h",
    ],
    srcs = [
        "clock.cpp",
    ],
    deps = [
        ":types",
        ":platform",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "core",
    deps = [
        ":filesystem",
        ":log",
        ":clock",
        ":thread_context",
    ],
    visibility = ["//visibility:public"],
)
