load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "math",
    hdrs = [
        "vec.h",
        "mat.h",
        "functions.h",
    ],
    srcs = [
        "mat.cpp",
        "functions.cpp",
    ],
    deps = [
        "//src/core:assert",
    ],
    visibility = ["//visibility:public"],
)

