load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "math",
    hdrs = [
        "vec.h",
        "mat.h",
        "quat.h",
        "functions.h",
    ],
    srcs = [
        "mat.cpp",
        "functions.cpp",
    ],
    includes = [".."],
    deps = [
        "//src/core:assert",
    ],
    visibility = ["//visibility:public"],
)
