load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "window",
    hdrs = [
        "window.h",
    ],
    srcs = [
        "window.cpp",
    ],
    deps = [
        "//src/core:assert",
        "@glfw//:glfw",
    ],
    includes = [".."],
    visibility = ["//visibility:public"],
)
