load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "context",
    hdrs = [
        "allocation_callbacks.h",
        "context.h",
        "device.h",
        "surface.h",
        "index_buffer.h",
        "storage_buffer.h",
        "command_buffer.h",
        "uniform_buffer.h",
        "pipeline.h",
        "texture.h",
        "vma.h",
        "utils.h",
    ],
    srcs = [
        "allocation_callbacks.cpp",
        "context.cpp",
        "device.cpp",
        "surface.cpp",
        "index_buffer.cpp",
        "storage_buffer.cpp",
        "command_buffer.cpp",
        "uniform_buffer.cpp",
        "pipeline.cpp",
        "texture.cpp",
        "utils.cpp",
    ],
    includes = [".."],
    deps = [
        "@volk//:volk",
        "@vma//:vma",
        "@spirv_reflect//:spirv_reflect",
        "//src/core:core",
    ],
    visibility = ["//visibility:public"],
)
