load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "context",
    hdrs = [
        "allocation_callbacks.h",
        "context.h",
        "device.h",
        "surface.h",
        "index_buffer.h",
        "storage_buffer.h",
        "command_buffer.h",
        "uniform_buffer.h",
        "indirect_draw_buffer.h",
        "pipeline.h",
        "texture.h",
        "vma.h",
        "shader_program.h",
    ],
    srcs = [
        "allocation_callbacks.cpp",
        "context.cpp",
        "device.cpp",
        "surface.cpp",
        "index_buffer.cpp",
        "storage_buffer.cpp",
        "command_buffer.cpp",
        "uniform_buffer.cpp",
        "indirect_draw_buffer.cpp",
        "pipeline.cpp",
        "texture.cpp",
        "shader_program.cpp",
    ],
    includes = [".."],
    deps = [
        "@volk//:volk",
        "@vma//:vma",
        "//src/core:core",
    ],
    visibility = ["//visibility:public"],
)
