load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "context",
    hdrs = [
        "allocation_callbacks.h",
        "context.h",
        "device.h",
        "surface.h",
        "buffer.h",
        "command_buffer.h",
        "pipeline.h",
        "texture.h",
        "vma.h",
        "shader_program.h",
    ],
    srcs = [
        "allocation_callbacks.cpp",
        "context.cpp",
        "device.cpp",
        "surface.cpp",
        "buffer.cpp",
        "command_buffer.cpp",
        "pipeline.cpp",
        "texture.cpp",
        "shader_program.cpp",
    ],
    includes = [".."],
    deps = [
        "@volk//:volk",
        "@vma//:vma",
        "@glfw//:glfw",
        "//src/core:core",
    ],
    linkopts = select({
        "@platforms//os:windows": [
            "-DEFAULTLIB:user32.lib",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
