load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_string8",
    size = "small",
    srcs = [
        "test_string8.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src/core:string8",
    ],
)

cc_test(
    name = "test_filesystem",
    size = "small",
    srcs = [
        "test_filesystem.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//src/core:filesystem",
    ],
)
