load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test_vec2",
    size = "small",
    srcs = [
        "test_vec2.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//math:math",
    ],
)

cc_test(
    name = "test_vec3",
    size = "small",
    srcs = [
        "test_vec3.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//math:math",
    ],
)

cc_test(
    name = "test_vec4",
    size = "small",
    srcs = [
        "test_vec4.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//math:math",
    ],
)

cc_test(
    name = "test_mat4",
    size = "small",
    srcs = [
        "test_mat4.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//math:math",
    ],
)

cc_test(
    name = "test_functions",
    size = "small",
    srcs = [
        "test_functions.cpp",
    ],
    deps = [
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "//math:math",
    ]
)
