load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@helios//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")

copy_files_to_directory(
    name = "copy_obj_data",
    srcs = [
        "@sponza_scene//:obj",
    ],
    output_directory = ".",
)

copy_files_to_directory(
    name = "copy_texture_data",
    srcs = [
        "@sponza_scene//:textures",
    ],
    output_directory = ".",
)

cc_binary(
    name = "import_obj",
    srcs = [
        "benchmark_import_obj.cpp",
    ],
    deps = [
        "//src/assets:import",
        "//src/core:clock",
        "@tinyobjloader//:tinyobjloader",
    ],
    data = [
        ":copy_obj_data",
        ":copy_texture_data",
    ],
)
