load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

cc_library(
    name = "dds_image",
    hdrs = [
        "dds_image.h",
        "image.h",
    ],
    srcs = [
        "dds_image.cpp",
    ],
    includes = ["../.."],
    deps = [
        "//src/core:core",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "import_image",
    hdrs = [
        "image.h",
        "import_image.h",
    ],
    srcs = [
        "import_image.cpp",
    ],
    includes = ["../.."],
    deps = [
        ":dds_image",
        "//src/core:core",
        "@stb//:stb_image",
        "@tinyexr//:tinyexr",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "export_image",
    hdrs = [
        "image.h",
        "export_image.h",
        "transform_image.h",
    ],
    srcs = [
        "transform_image.cpp",
        "export_image.cpp",
    ],
    includes = ["../.."],
    deps = [
        "//src/core:core",
        "//src/rhi:context",
        "@stb//:stb_image_write",
        "@stb//:stb_dxt",
        "@stb//:stb_image_resize2",
        "@tinyexr//:tinyexr",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "cooker",
    srcs = [
        "cooker.cpp",
    ],
    includes = ["../.."],
    deps = [
        ":import_image",
        ":export_image",
        "@fly//src/assets/image/glsl:eq2cube_vert_spv",
        "@fly//src/assets/image/glsl:eq2cube_frag_spv",
    ],
    visibility = ["//visibility:public"],
)